# skim

./: .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.claude/skills/release/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  perm-test.yml  release.yml
demo/: README.md  encode.mjs  record.mjs  screenshots.mjs  vite.demo.config.ts
demo/mock/: data.ts  plugin-autostart.ts  plugin-opener.ts  plugin-updater.ts  tauri-app.ts  tauri-core.ts  tauri-event.ts  tauri-window.ts
demo/skill/: SKILL.md
design/: Skim.html
design/logo/: README.md
docs/: 404.html  CNAME  index.html  microsoft-identity-association.json  privacy.html  robots.txt  sitemap.xml  terms.html
docs/assets/: app.js  legal.css  locales.js  zine.css
src/: App.svelte  ComposeRoot.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: toast_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: badge.rs  error.rs  lib.rs  main.rs  net.rs  notify.rs  secrets.rs  state.rs
src-tauri/src/ai/: agent.rs  anthropic.rs  attachments.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  prompts.rs  retrieval.rs
src-tauri/src/commands/: accounts.rs  ai.rs  compose.rs  invites.rs  mail.rs  mod.rs  search.rs  settings.rs
src-tauri/src/db/: accounts.rs  bodies.rs  draft_attachments.rs  drafts.rs  mod.rs  models.rs  queries.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_invites.sql  0003_draft_attachments.sql  0004_folder_status.sql  0005_unsubscribe.sql  0006_server_drafts.sql  0007_unified_indexes.sql  0008_security.sql
src-tauri/src/mail/: autoconfig.rs  ics.rs  imap_client.rs  mod.rs  oauth.rs  parse.rs  sanitize.rs  smtp.rs  suspicion.rs  sync.rs  threading.rs  threading_tests.rs
src-tauri/windows/: hooks.nsh
src/components/: AddressInput.svelte  AiRecap.svelte  AttachmentChips.svelte  CommandPalette.svelte  ComposeForm.svelte  Composer.svelte  HtmlViewer.svelte  InviteCard.svelte  MessageList.svelte  MessageRow.svelte  ReadingPane.svelte  ShortcutsOverlay.svelte  Sidebar.svelte  Titlebar.svelte
src/components/onboarding/: ConnectForm.svelte  Onboarding.svelte
src/components/settings/: Settings.svelte
src/lib/: ai-links.ts  api.ts  md.ts  mock.ts  notifications.ts  ollama-detect.svelte.ts  slow-start.svelte.ts  types.ts
src/lib/i18n/: index.svelte.ts
src/lib/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pl.json  ru.json  sr.json  zh.json
src/lib/stores/: ai.svelte.ts  aiChat.svelte.ts  mail.svelte.ts  palette.svelte.ts  ui.svelte.ts  update.svelte.ts
src/styles/: base.css  tokens.css
