[package]
name = "skim"
version = "0.1.0"
description = "A fast, minimalist, AI-native email client for Windows"
authors = ["Skim contributors"]
license = "MIT"
repository = "https://github.com/nikserg/skim"
edition = "2021"

[lib]
name = "skim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-platform-verifier = "0.5"
futures = "0.3"
mail-parser = "0.11"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
base64 = "0.22"
url = "2"
sha2 = "0.10"
getrandom = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
