[package]
name = "skim"
version = "1.0.8"
description = "A fast, minimalist, AI-native email client for Windows"
authors = ["Skim contributors"]
license = "MIT"
repository = "https://github.com/nikserg/skim"
edition = "2021"

[lib]
name = "skim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# ~2.9: last release on reqwest 0.12 (ours) — 2.10+ pulls a second reqwest/hyper
# copy via 0.13. `zip` feature off: Windows update artifacts are bare installers.
tauri-plugin-updater = { version = "~2.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# no `env-filter`: it drags the regex engine (~200 KiB) in for RUST_LOG parsing;
# `filter::Targets` understands the same `crate=level` directives without it.
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "io-util"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
# default-features off: the default `aws_lc_rs` backend would compile a second
# (unused) crypto library into the binary alongside ring — ~2 MB of dead weight.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-platform-verifier = "0.5"
futures = "0.3"
mail-parser = "0.11"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
base64 = "0.22"
url = "2"
# 0.11 matches the copy lopdf already pulls in — one build of sha2, not two.
sha2 = "0.11"
getrandom = "0.3"
ammonia = "4"
tauri-winrt-notification = "0.7"
windows = { version = "0.61", features = ["Data_Xml_Dom", "UI_Notifications", "Foundation_Collections"] }
winreg = "0.55"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "pool"] }
# default features off: chrono/jiff/time are only for PDF date fields, rayon
# only parallelizes page ops — none of that serves plain text extraction.
lopdf = { version = "0.44", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
# Unwind tables are ~6 MB of the binary (−23% off the NSIS installer). Nothing
# relies on catching panics: PDF parsing (lopdf) returns Results instead of
# panicking, so a malformed attachment can't take the app down.
panic = "abort"
